prevent scaling on mobile; removed table padding on small screens and shortened displayed dates

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -22,7 +22,9 @@
 }
 
 table {
-    padding: 2%;
+    @media only screen and (min-width: 767px) {
+        padding-left: 2%;
+    }
 }
 
 #deleteBtn {
